# tensor

./: .clang-format  .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  example.cpp  fix.cpp  tensor.h  test.cpp
examples/: example.cpp  example2.cpp
exampls/: example.cpp
tensor/: tensor.h
test/: CMakeLists.txt  test.cpp  test.org.cpp
